Add test output management classes for enhanced test execution and formatting