@@ -5,22 +5,13 @@ import java.util.regex.Pattern;
 import org.apache.maven.project.MavenProject;
 
 /** Intercepts and processes test execution output using GradlDromus formatting. */
+@SuppressWarnings("PMD.TestClassWithoutTestCases") // This is not a test class
 public class TestExecutionInterceptor {
 
   private final MavenProject project;
   private final TestOutputFormatter formatter;
-
-  // Patterns for common test output formats
-  private static final Pattern TEST_RUNNING_PATTERN = Pattern.compile("^Running (.+)$");
-  private static final Pattern TEST_RESULT_PATTERN =
-      Pattern.compile(
-          "^Tests run: (\\d+), Failures: (\\d+), Errors: (\\d+), "
-              + "Skipped: (\\d+), Time elapsed: ([\\d.]+) sec");
-  private static final Pattern INDIVIDUAL_TEST_PATTERN =
-      Pattern.compile(
-          "^(.+?)\\((.+?)\\)\\s+Time elapsed:\\s+([\\d.]+)\\s+sec" + "\\s+<<<\\s+(FAILURE|ERROR)!");
-  private static final Pattern INDIVIDUAL_TEST_SUCCESS_PATTERN =
-      Pattern.compile("^(.+?)\\((.+?)\\)\\s+Time elapsed:\\s+([\\d.]+)\\s+sec$");
+  private final OutputPatternMatcher patternMatcher;
+  private final OutputLineProcessor lineProcessor;
 
   /**
    * Constructs a new TestExecutionInterceptor.
@@ -28,9 +19,11 @@ public class TestExecutionInterceptor {
    * @param project the Maven project
    * @param formatter the test output formatter
    */
-  public TestExecutionInterceptor(MavenProject project, TestOutputFormatter formatter) {
+  public TestExecutionInterceptor(final MavenProject project, final TestOutputFormatter formatter) {
     this.project = project;
     this.formatter = formatter;
+    this.patternMatcher = new OutputPatternMatcher();
+    this.lineProcessor = new OutputLineProcessor(project, formatter);
   }
 
   /**
@@ -39,52 +32,26 @@ public class TestExecutionInterceptor {
    * @param line the output line to process
    * @return the formatted output line or null if the line should be skipped
    */
-  public String interceptTestOutput(String line) {
-    if (line == null || line.trim().isEmpty()) {
-      return line;
+  public String interceptTestOutput(final String line) {
+    String result = line;
+    
+    if (line != null && !line.isBlank()) {
+      result = patternMatcher.tryMatchTestClassExecution(line, formatter);
+      if (result == null) {
+        result = patternMatcher.tryMatchIndividualTest(line, formatter);
+      }
+      if (result == null) {
+        result = patternMatcher.tryMatchTestSuccess(line, formatter);
+      }
+      if (result == null) {
+        result = patternMatcher.tryMatchTestResults(line, formatter);
+      }
+      if (result == null) {
+        result = lineProcessor.preprocessOutputLine(line);
+      }
     }
-
-    // Detect test class execution
-    Matcher runningMatcher = TEST_RUNNING_PATTERN.matcher(line);
-    if (runningMatcher.matches()) {
-      String testClass = runningMatcher.group(1);
-      return formatTestClassExecution(testClass);
-    }
-
-    // Detect individual test results (failures/errors)
-    Matcher individualTestMatcher = INDIVIDUAL_TEST_PATTERN.matcher(line);
-    if (individualTestMatcher.matches()) {
-      String methodName = individualTestMatcher.group(1);
-      String className = individualTestMatcher.group(2);
-      double timeElapsed = Double.parseDouble(individualTestMatcher.group(3));
-      String status = individualTestMatcher.group(4);
-      return formatter.formatTestResult(className, methodName, status, (long) (timeElapsed * 1000));
-    }
-
-    // Detect individual test results (success)
-    Matcher individualTestSuccessMatcher = INDIVIDUAL_TEST_SUCCESS_PATTERN.matcher(line);
-    if (individualTestSuccessMatcher.matches()) {
-      String methodName = individualTestSuccessMatcher.group(1);
-      String className = individualTestSuccessMatcher.group(2);
-      double timeElapsed = Double.parseDouble(individualTestSuccessMatcher.group(3));
-      return formatter.formatTestResult(
-          className, methodName, "SUCCESS", (long) (timeElapsed * 1000));
-    }
-
-    // Detect test results summary
-    Matcher resultMatcher = TEST_RESULT_PATTERN.matcher(line);
-    if (resultMatcher.matches()) {
-      return formatTestResults(
-          Integer.parseInt(resultMatcher.group(1)), // tests run
-          Integer.parseInt(resultMatcher.group(2)), // failures
-          Integer.parseInt(resultMatcher.group(3)), // errors
-          Integer.parseInt(resultMatcher.group(4)), // skipped
-          Double.parseDouble(resultMatcher.group(5)) // time
-          );
-    }
-
-    // Pass through other lines with potential modifications
-    return preprocessOutputLine(line);
+    
+    return result;
   }
 
   /**
@@ -93,22 +60,99 @@ public class TestExecutionInterceptor {
    * @param line the error line to process
    * @return the formatted error line
    */
-  public String interceptErrorOutput(String line) {
-    if (line == null || line.trim().isEmpty()) {
-      return line;
+  public String interceptErrorOutput(final String line) {
+    String result = line;
+    if (line != null && !line.isBlank()) {
+      result = formatter.formatErrorLine(line);
     }
+    return result;
+  }
+}
 
-    return formatter.formatErrorLine(line);
+/**
+ * Handles pattern matching for different types of test output.
+ */
+class OutputPatternMatcher {
+  // Patterns for common test output formats
+  private static final Pattern RUNNING_PATTERN = Pattern.compile("^Running (.+)$");
+  private static final Pattern RESULT_PATTERN =
+      Pattern.compile(
+          "^Tests run: (\\d+), Failures: (\\d+), Errors: (\\d+), "
+              + "Skipped: (\\d+), Time elapsed: ([\\d.]+) sec");
+  private static final Pattern INDIVIDUAL_PATTERN =
+      Pattern.compile(
+          "^(.+?)\\((.+?)\\)\\s+Time elapsed:\\s+([\\d.]+)\\s+sec" + "\\s+<<<\\s+(FAILURE|ERROR)!");
+  private static final Pattern SUCCESS_PATTERN =
+      Pattern.compile("^(.+?)\\((.+?)\\)\\s+Time elapsed:\\s+([\\d.]+)\\s+sec$");
+
+  String tryMatchTestClassExecution(final String line, 
+      final TestOutputFormatter formatter) {
+    // PMD suppression: Using static pattern matcher is acceptable
+    final Matcher runningMatcher = RUNNING_PATTERN.matcher(line);
+    String result = null;
+    if (runningMatcher.matches()) {
+      final String testClass = runningMatcher.group(1);
+      result = formatTestClassExecution(testClass, formatter);
+    }
+    return result;
   }
 
-  private String formatTestClassExecution(String testClass) {
-    String simpleName = testClass.substring(testClass.lastIndexOf('.') + 1);
+  String tryMatchIndividualTest(final String line, 
+      final TestOutputFormatter formatter) {
+    final Matcher testMatcher = INDIVIDUAL_PATTERN.matcher(line);
+    String result = null;
+    if (testMatcher.matches()) {
+      final String methodName = testMatcher.group(1);
+      final String className = testMatcher.group(2);
+      final double timeElapsed = Double.parseDouble(testMatcher.group(3));
+      final String status = testMatcher.group(4);
+      result = formatter.formatTestResult(className, methodName, status, 
+          (long) (timeElapsed * 1000));
+    }
+    return result;
+  }
+
+  String tryMatchTestSuccess(final String line, final TestOutputFormatter formatter) {
+    final Matcher successMatcher = SUCCESS_PATTERN.matcher(line);
+    String result = null;
+    if (successMatcher.matches()) {
+      final String methodName = successMatcher.group(1);
+      final String className = successMatcher.group(2);
+      final double timeElapsed = Double.parseDouble(successMatcher.group(3));
+      result = formatter.formatTestResult(className, methodName, "SUCCESS", 
+          (long) (timeElapsed * 1000));
+    }
+    return result;
+  }
+
+  String tryMatchTestResults(final String line, final TestOutputFormatter formatter) {
+    final Matcher resultMatcher = RESULT_PATTERN.matcher(line);
+    String result = null;
+    if (resultMatcher.matches()) {
+      result = formatTestResults(
+          Integer.parseInt(resultMatcher.group(1)), // tests run
+          Integer.parseInt(resultMatcher.group(2)), // failures
+          Integer.parseInt(resultMatcher.group(3)), // errors
+          Integer.parseInt(resultMatcher.group(4)), // skipped
+          Double.parseDouble(resultMatcher.group(5)), // time
+          formatter);
+    }
+    return result;
+  }
+
+  private String formatTestClassExecution(final String testClass, final TestOutputFormatter formatter) {
+    final String simpleName = testClass.substring(testClass.lastIndexOf('.') + 1);
     return formatter.formatProgressLine("🧪 Executing " + simpleName + "...");
   }
 
   private String formatTestResults(
-      int testsRun, int failures, int errors, int skipped, double timeElapsed) {
-    StringBuilder result = new StringBuilder();
+      final int testsRun,
+      final int failures,
+      final int errors,
+      final int skipped,
+      final double timeElapsed,
+      final TestOutputFormatter formatter) {
+    final StringBuilder result = new StringBuilder();
 
     if (failures == 0 && errors == 0) {
       result.append("✅ ");
@@ -134,31 +178,61 @@ public class TestExecutionInterceptor {
 
     return formatter.formatProgressLine(result.toString());
   }
+}
 
-  private String preprocessOutputLine(String line) {
-    // Skip Maven noise
-    if (line.contains("[INFO]") || line.contains("[DEBUG]") || line.contains("[WARNING]")) {
-      return null; // Skip these lines
+/**
+ * Processes and filters output lines that don't match specific patterns.
+ */
+class OutputLineProcessor {
+  private final MavenProject project;
+  private final TestOutputFormatter formatter;
+
+  OutputLineProcessor(final MavenProject project, final TestOutputFormatter formatter) {
+    this.project = project;
+    this.formatter = formatter;
+  }
+
+  String preprocessOutputLine(final String line) {
+    String result = line;
+
+    if (shouldSkipLine(line)) {
+      result = null;
+    } else if (isAssertionFailure(line)) {
+      result = formatter.formatErrorLine(line.trim());
+    } else if (isStackTrace(line)) {
+      result = handleStackTrace(line);
     }
 
-    // Skip empty lines and dashes
-    if (line.trim().isEmpty() || line.matches("^-+$")) {
-      return null;
-    }
+    return result;
+  }
 
-    // Format assertion failures and stack traces
-    if (line.contains("AssertionError") || line.contains("Expected") || line.contains("Actual")) {
-      return formatter.formatErrorLine(line.trim());
-    }
+  private boolean shouldSkipLine(final String line) {
+    return line.contains("[INFO]")
+        || line.contains("[DEBUG]")
+        || line.contains("[WARNING]")
+        || line.isBlank()
+        || line.matches("^-+$");
+  }
 
-    if (line.trim().startsWith("at ")) {
-      // Only show stack traces from our project
-      if (line.contains(project.getGroupId()) || line.contains("Test")) {
-        return formatter.formatErrorLine("  " + line.trim());
+  private boolean isAssertionFailure(final String line) {
+    return line.contains("AssertionError") || line.contains("Expected") || line.contains("Actual");
+  }
+
+  private boolean isStackTrace(final String line) {
+    final String trimmedLine = line.trim();
+    return trimmedLine.startsWith("at ");
+  }
+
+  private String handleStackTrace(final String line) {
+    String result = line;
+    if (isStackTrace(line)) {
+      final String groupId = project.getGroupId();
+      if (line.contains(groupId) || line.contains("Test")) {
+        result = formatter.formatErrorLine("  " + line.trim());
+      } else {
+        result = null; // Skip external stack traces
       }
-      return null; // Skip external stack traces
     }
-
-    return line;
+    return result;
   }
 }
